chore: metadata query cleanup [DHIS2-18041] (#20075)
* chore: metadata query cleanup [DHIS2-18041]

* chore: rename Query.from to Query.of

* chore: remove unnecessary suppress

* fix: remove getSchema from Query

* fix: in-memory value extraction

* chore: sonar issues